fixed certain icons from not showing

--- a/static/css/forms.scss
+++ b/static/css/forms.scss
@@ -76,7 +76,7 @@ form {
 }
 
 .form__greeting {
-  margin: 80px auto 40px auto;
+  margin: 80px auto 4r0px auto;
   max-width: 45%;
   text-align: center;
   color: darken($gray, 10%);
